--- a/index.html
+++ b/index.html
@@ -104,17 +104,34 @@
             <li class="file html-file"><a href="eReaction.html">📄 eReaction.html</a></li>
             <li class="file html-file"><a href="einsteinHeisenbergSearch.html">📄 einsteinHeisenbergSearch.html</a></li>
             <li class="file html-file"><a href="find_text_in_file.html">📄 find_text_in_file.html</a></li>
-
-<ul class="tree-view">
-    <li class="folder">📁 https://3xploitch3ats.github.io/
-        <ul>
-            <li class="file html-file"><a href="AddingPictureToZipPakPixel.html">📄 AddingPictureToZipPakPixel.html</a></li>
-
-                    </ul>
+        </ul>
     </li>
     </li>
 </ul>
-        </ul>
+
+<ul class="tree-view">
+    <li class="folder">📁 https://github.com/3xploitch3ats/3xploitch3ats.github.io
+        <ul>
+<label>ctrl+0 delete all uploads</label>
+            <li class="file html-file"><a href="https://to-4k-rgb50.glitch.me/">📄 https://to-4k-rgb50.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://cartoon4k.glitch.me/">📄 https://cartoon4k.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://to4k.glitch.me/">📄 https://to4k.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://to8k.glitch.me/">📄 https://to8k.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://to720.glitch.me/">📄 https://to720.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://to-4k-rgb10.glitch.me/">📄 https://to-4k-rgb10.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://whiteandblack.glitch.me/">📄 https://whiteandblack.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://whiteandcolor.glitch.me/">📄 https://whiteandcolor.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://cartoon8k.glitch.me/">📄 https://cartoon8k.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://cartoon720.glitch.me/">📄 https://cartoon720.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://towma.glitch.me/">📄 https://towma.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://tocb.glitch.me/">📄 https://tocb.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://tobc.glitch.me/">📄 https://tobc.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://cartoonmp4.glitch.me/">📄 https://cartoonmp4.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://mp4-to-wma.glitch.me/">📄 https://mp4-to-wma.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://mp4-to-mono.glitch.me/">📄 https://mp4-to-mono.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://mp4-to-cart00n.glitch.me/">📄 https://mp4-to-cart00n.glitch.me/</a></li>
+            <li class="file html-file"><a href="https://cartoonmp4.glitch.me/">📄 https://cartoonmp4.glitch.me/</a></li>
+    </ul>
     </li>
     </li>
 </ul>
@@ -133,9 +150,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
