--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <li class="file html-file"><a href="AddingPictureToZipPakPixel.html">📄 AddingPictureToZipPakPixel.html</a></li>
             <li class="file html-file"><a href="AllPlatform_Recorder.html">📄 AllPlatform_Recorder.html</a></li>
             <li class="file html-file"><a href="BlackJack21.html">📄 BlackJack21.html</a></li>
-            <li class="file html-file"><a href="Centre_Du_Quebec.html">📄 Centre_Du_Quebec.html</a></li>
+            <li class="file html-file"><a href="Centre_Du_Quebec.html">📄 Centre_Du_Quebec.html</a></li>            
+            <li class="file html-file"><a href="CeasarCipher.html">📄 CeasarCipher.html</a></li>
             <li class="file html-file"><a href="COLORBOX_RGBA_HEX.html">📄 COLORBOX_RGBA_HEX.html</a></li>
             <li class="file html-file"><a href="Chat_P2P.html">📄 Chat_P2P.html</a></li>
             <li class="file html-file"><a href="Chat_P2P_V2.html">📄 Chat_P2P_V2.html</a></li>
