--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
             <li class="file html-file"><a href="Thunder-Menu_Raw.html">📄 Thunder-Menu_Raw.html</a></li>
             <li class="file html-file"><a href="Triangle3D.html">📄 Triangle3D.html</a></li>
             <li class="file html-file"><a href="Triangle3D-Online.html">📄 Triangle3D-Online.html</a></li>         
-            <li class="file html-file"><a href="Twet.html" style="color: red;">📄 Twet.html</a></li>        
-            <li class="file html-file"><a href="https://tvapple.glitch.me" style="color: red;">📄 TvApple</a></li>    
+            <li class="file html-file"><a href="Twet.html" style="color: red;">📄 Twet.html</a></li>
+            <li class="file html-file"><a href="TvApple.html" style="color: red;">📄 TvApple.html Github</a></li>    
+            <li class="file html-file"><a href="https://tvapple.glitch.me" style="color: red;">📄 TvApple Glitch</a></li>    
             <li class="file html-file"><a href="Uploads-Files.html">📄 Uploads-Files.html</a></li>
             <li class="file html-file"><a href="VideoUploads.html">📄 VideoUploads.html</a></li>        
             <li class="file html-file"><a href="VideoPlayListJson.html">📄 VideoPlayListJson.html</a></li>
