--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <li class="file html-file"><a href="Gif_Extractor.html">📄 Gif_Extractor.html</a></li>
             <li class="file html-file"><a href="Gif_Generator.html">📄 Gif_Generator.html</a></li>
             <li class="file html-file"><a href="Google_Street_View_Satellite_View_Go_To_Google_Earth_Coords.html">📄 Google_Street_View_Satellite_View_Go_To_Google_Earth_Coords.html</a></li>
+            <li class="file html-file"><a href="Html_Text_View.html" style="color: blue;">📄 Html_Text_View.html</a></li>    
+            <li class="file html-file"><a href="ImageToTextHtml.html" style="color: blue;">📄 ImageToTextHtml.html</a></li>   
             <li class="file html-file"><a href="Include_Exclude.html">📄 Include_Exclude.html</a></li>
             <li class="file html-file"><a href="Index2024.html">📄 Index2024.html</a></li>
             <li class="file html-file"><a href="Index2025.html">📄 Index2025.html</a></li>
