Add new HTML files to index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <li class="folder">📁 https://3xploitch3ats.github.io/
         <ul>
             <li class="file html-file"><a href="AddingPictureToZipPakPixel.html">📄 AddingPictureToZipPakPixel.html</a></li>
+            <li class="file html-file"><a href="CameraDetectDownload.html">📄 CameraDetectDownload.html</a></li>
+            <li class="file html-file"><a href="PakPixel.html">📄 PakPixel.html</a></li>
+            <li class="file html-file"><a href="SelectVideoExtract.html">📄 SelectVideoExtract.html</a></li>
+            
             <li class="file html-file"><a href="AllPlatform_Recorder.html">📄 AllPlatform_Recorder.html</a></li>
             <li class="file html-file"><a href="https://applewatchtv.glitch.me" style="color: red;">📄 AppleWatchTv</a></li>     
             <li class="file html-file"><a href="BlackJack21.html">📄 BlackJack21.html</a></li>
@@ -85,7 +89,6 @@
             <li class="file html-file"><a href="M3U_LIVE_RECORD_V2.HTML">📄 M3U_LIVE_RECORD_V2.HTML</a></li>
             <li class="file html-file"><a href="M3U_Live_And_Record.html">📄 M3U_Live_And_Record.html</a></li>
             <li class="file html-file"><a href="Paint_Canvas.html">📄 Paint_Canvas.html</a></li>
-            <li class="file html-file"><a href="PakPixel.html">📄 PakPixel.html</a></li>
             <li class="file html-file"><a href="Poker_Card.html">📄 Poker_Card.html</a></li>
             <li class="file html-file"><a href="PrintScreen.html">📄 PrintScreen.html</a></li>            
             <li class="file html-file"><a href="RemoveExclude.html">📄 RemoveExclude.html</a></li>
