Add link to ImageExtract.html in index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <ul>
             <li class="file html-file"><a href="AddingPictureToZipPakPixel.html">📄 AddingPictureToZipPakPixel.html</a></li>
             <li class="file html-file"><a href="CameraDetectDownload.html">📄 CameraDetectDownload.html</a></li>
+            <li class="file html-file"><a href="ImageExtract.html">📄 ImageExtract.html</a></li>
             <li class="file html-file"><a href="PakPixel.html">📄 PakPixel.html</a></li>
             <li class="file html-file"><a href="SelectVideoExtract.html">📄 SelectVideoExtract.html</a></li>
             <br>
