Add new file links to index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
             <li class="file html-file"><a href="ImageExtract.html">📄 ImageExtract.html</a></li>
             <li class="file html-file"><a href="PakPixel.html">📄 PakPixel.html</a></li>
             <li class="file html-file"><a href="SelectVideoExtract.html">📄 SelectVideoExtract.html</a></li>
+            <br>  
+            <li class="file html-file"><a href="3xploitch3ats.mp4" style="color: red;">📄 3xploitch3ats.mp4</a></li>
+            <li class="file html-file"><a href="Video_Image_Extractor.html">📄 Video_Image_Extractor.html</a></li>
+            <li class="file html-file"><a href="Adjuster_Pixel.html">📄 Adjuster_Pixel.html</a></li>
+            <li class="file html-file"><a href="DecodeBmp.html">📄 DecodeBmp.html</a></li>
+            <br>         
+            <li class="file html-file"><a href="Download_ffmpeg_AutoBuild.html">📄 Download_ffmpeg_AutoBuild.html</a></li>            
             <br>
             <li class="file html-file"><a href="AllPlatform_Recorder.html">📄 AllPlatform_Recorder.html</a></li>
             <li class="file html-file"><a href="https://applewatchtv.glitch.me" style="color: red;">📄 AppleWatchTv</a></li>     
@@ -69,7 +76,7 @@
             <li class="file html-file"><a href="Chuck_Norris.html">📄 Chuck_Norris.html</a></li>
             <li class="file html-file"><a href="CorsEngine-PasteBin.html">📄 CorsEngine-PasteBin.html</a></li>
             <li class="file html-file"><a href="Days7.html">📄 Days7.html</a></li>
-            <li class="file html-file"><a href="DecodeBmp.html">📄 DecodeBmp.html</a></li>
+            <br>
             <li class="file html-file"><a href="EncodeDecodeFileToJson.html">📄 EncodeDecodeFileToJson.html</a></li>
             <li class="file html-file"><a href="EncodeFileToBmp.html">📄 EncodeFileToBmp.html</a></li>
             <li class="file html-file"><a href="Estrie.html">📄 Estrie.html</a></li>
