Update links for CeasarCipher and add alternatives

--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
             <li class="file html-file"><a href="AllPlatform_Recorder.html">📄 AllPlatform_Recorder.html</a></li>
             <li class="file html-file"><a href="https://applewatchtv.glitch.me" style="color: red;">📄 AppleWatchTv</a></li>     
             <li class="file html-file"><a href="BlackJack21.html">📄 BlackJack21.html</a></li>
-            <li class="file html-file"><a href="Centre_Du_Quebec.html">📄 Centre_Du_Quebec.html</a></li>            
-            <li class="file html-file"><a href="CeasarCipher.html">📄 CeasarCipher.html</a></li>
+            <li class="file html-file"><a href="Centre_Du_Quebec.html">📄 Centre_Du_Quebec.html</a></li>      
+            <br> 
+            <li class="file html-file"><a href="Ceasar_Cipher.html">📄 Alternative-Ceasar_Cipher.html</a></li>
+            <li class="file html-file"><a href="CeasarCipher.html">📄 Glitch-broke-CeasarCipher.html</a></li>
+            <br> 
             <li class="file html-file"><a href="COLORBOX_RGBA_HEX.html">📄 COLORBOX_RGBA_HEX.html</a></li>
             <li class="file html-file"><a href="Chat_P2P.html">📄 Chat_P2P.html</a></li>
             <li class="file html-file"><a href="Chat_P2P_V2.html">📄 Chat_P2P_V2.html</a></li>
