--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
 <ul class="tree-view">
     <li class="folder">📁 https://3xploitch3ats.github.io/
-        <ul>                 
+        <ul>                
+            <li class="file html-file"><a href="FuserV2.html" style="color: red;">📄 FuserV2.html</a></li>     
             <li class="file html-file"><a href="Ceasar_Cypher_Stream_BigFiles.html">📄 Ceasar_Cypher_Stream_BigFiles.html</a></li>     
             <li class="file html-file"><a href="Ceasar_Cypher_Chunk_Progress.html">📄 Ceasar_Cypher_Chunk_Progress.html</a></li>     
             <li class="file html-file"><a href="Ceasar_Cipher.html">📄 Alternative-Ceasar_Cipher.html</a></li>
